<resources>
    <string name="app_name">CampusDeal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_m_already_a_member">I\'m already a member</string>
    <string name="get_started">Get started</string>
    <string name="app_theme_text">Connect with fellow students within your campus community. Buy and sell items directly with your peers</string>
    <string name="welcome_msg">Welcome to\n<font color="#00c1a2">Campus</font>Deal</string>
    <string name="logo_txt"><font color="#00c1a2">Campus</font>Deal</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_category">Select Category</string>
    <string name="post">Post</string>
    <string name="price_bdt">Price(BDT)</string>
    <string name="location">Location</string>
    <string name="negotiable">Negotiable</string>
    <string name="select_location">Select Location</string>
    <string name="pick_location">Pick Location</string>
    <string name="using_device_location_tap_to_change">Using device location. Tap to change the location.</string>
    <string name="tap_to_change">Tap to change the location.</string>
    <string name="urgent">Urgent</string>
    <string name="see_all">See all</string>
    <string name="urgent_and_new">Urgent and New</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos
sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
recusandae alias error harum maxime adipisci amet laborum. Perspiciatis
minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit
quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur
fugiat, temporibus enim commodi iusto libero magni deleniti quod quam
consequuntur! Commodi minima excepturi repudiandae velit hic maxime
doloremque. Quaerat provident commodi consectetur veniam similique ad
earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo
fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore
suscipit quas? Nulla, placeat. Voluptatem quaerat non architecto ab laudantium
modi minima sunt esse temporibus sint culpa, recusandae aliquam numquam
totam ratione voluptas quod exercitationem fuga. Possimus quis earum veniam
quasi aliquam eligendi, placeat qui corporis!</string>
    <string name="contact">Contact</string>
    <string name="my_ads">My Ads</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="your_deal_requests">Your Deal Requests</string>
</resources>