<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OnBoardingFragment"
    android:padding="16dp"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginHorizontal="25dp"
        android:elevation="25dp"
        android:padding="0dp"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="hello_robo.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

<!--    https://github.com/material-components/material-components-android/blob/master/docs/theming/Typography.md-->

    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearance.Material3.DisplayMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/welcome_msg"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_theme_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_start_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>