<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PostAdFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/back_button_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Post Ad"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/back_button_iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button_iv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_rv"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button_iv"
            tools:itemCount="5"
            tools:listitem="@layout/card_post_ad_image" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Add up to 5 photos"
            app:layout_constraintStart_toStartOf="@+id/image_rv"
            app:layout_constraintTop_toBottomOf="@+id/image_rv" />

        <TextView
            android:id="@+id/textView9"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="What are you selling?"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:background="@color/bg_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:background="@color/bg_light"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Describe your item" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView10"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Category"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/selectCategoryCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/selected_category_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/bg_light"
                    android:src="@drawable/ic_widgets_24"
                    app:civ_border_color="@color/bg_light"
                    app:civ_border_width="8dp"
                    app:civ_circle_background_color="@color/bg_light" />

                <TextView
                    android:id="@+id/selected_category_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/select_category" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView12"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Pricing"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/selectCategoryCard"
            app:layout_constraintTop_toBottomOf="@+id/selectCategoryCard" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:background="@color/bg_light"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/price_bdt" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/negotiable_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
            app:useMaterialThemeColors="false" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/negotiable"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout4"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ad_post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/post"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/selectLocationCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/selected_location_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/bg_light"
                    android:src="@drawable/baseline_add_location_alt_24"
                    app:civ_border_color="@color/bg_light"
                    app:civ_border_width="8dp"
                    app:civ_circle_background_color="@color/bg_light" />

                <TextView
                    android:id="@+id/selected_location_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/select_location" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>